Major code cleanup and sharp/flat toggle restoration - Fixed 83% of ESLint issues (40→7) - Added proper TypeScript interfaces for all data structures - Restored sharp/flat toggle functionality across all components - Fixed chord data conversion and persistence - Added .gitignore for build artifacts - Built production installer for v1.0.0

--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "corduroy",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "electron/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron": "electron .",
+    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron-pack": "npm run build && electron-builder",
+    "dist": "npm run build && electron-builder --publish=never"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -20,6 +25,9 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^9.2.1",
+    "electron": "^37.4.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -28,6 +36,37 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "wait-on": "^8.0.4"
+  },
+  "build": {
+    "appId": "com.corduroy.guitar",
+    "productName": "Corduroy",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.music",
+      "icon": "assets/guitar.jpg",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        }
+      ]
+    },
+    "dmg": {
+      "title": "Corduroy",
+      "icon": "assets/guitar.jpg",
+      "background": "assets/guitar.jpg",
+      "window": {
+        "width": 540,
+        "height": 380
+      }
+    }
   }
 }
